@@ -1,5 +1,18 @@
 package no.nav.k9.sak.domene.registerinnhenting;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.enterprise.inject.Any;
 import jakarta.enterprise.inject.Instance;
@@ -12,15 +25,18 @@ import no.nav.abakus.iaygrunnlag.request.RegisterdataType;
 import no.nav.k9.felles.konfigurasjon.konfig.Tid;
 import no.nav.k9.kodeverk.behandling.BehandlingType;
 import no.nav.k9.kodeverk.behandling.FagsakYtelseType;
+import no.nav.k9.kodeverk.geografisk.AdresseType;
 import no.nav.k9.kodeverk.geografisk.Landkoder;
 import no.nav.k9.kodeverk.geografisk.Region;
 import no.nav.k9.kodeverk.person.NavBrukerKjønn;
 import no.nav.k9.kodeverk.person.PersonstatusType;
 import no.nav.k9.kodeverk.person.RelasjonsRolleType;
 import no.nav.k9.sak.behandlingslager.aktør.Adresseinfo;
+import no.nav.k9.sak.behandlingslager.aktør.DeltBosted;
 import no.nav.k9.sak.behandlingslager.aktør.Familierelasjon;
 import no.nav.k9.sak.behandlingslager.aktør.Personinfo;
 import no.nav.k9.sak.behandlingslager.aktør.historikk.AdressePeriode;
+import no.nav.k9.sak.behandlingslager.aktør.historikk.Personhistorikkinfo;
 import no.nav.k9.sak.behandlingslager.aktør.historikk.PersonstatusPeriode;
 import no.nav.k9.sak.behandlingslager.aktør.historikk.StatsborgerskapPeriode;
 import no.nav.k9.sak.behandlingslager.behandling.Behandling;
@@ -38,29 +54,13 @@ import no.nav.k9.sak.domene.medlem.MedlemTjeneste;
 import no.nav.k9.sak.domene.medlem.api.Medlemskapsperiode;
 import no.nav.k9.sak.domene.person.pdl.PersoninfoAdapter;
 import no.nav.k9.sak.domene.registerinnhenting.impl.SaksopplysningerFeil;
-import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.*;
 import no.nav.k9.sak.domene.typer.tid.DatoIntervallEntitet;
-import no.nav.k9.sak.skjæringstidspunkt.SkjæringstidspunktTjeneste;
 import no.nav.k9.sak.typer.AktørId;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class RegisterdataInnhenter {
 
     private static final Logger log = LoggerFactory.getLogger(RegisterdataInnhenter.class);
-
-    private final Map<FagsakYtelseType, YtelsesspesifikkRelasjonsFilter> barnRelasjonsFilter = Map.of(
-        FagsakYtelseType.OMSORGSPENGER_KS, new AlleRelasjonFilter(),
-        FagsakYtelseType.OMSORGSPENGER_MA, new AlleRelasjonFilter(),
-        FagsakYtelseType.OMSORGSPENGER_AO, new AlleRelasjonFilter(),
-        FagsakYtelseType.PSB, new PleietrengendeRelasjonsFilter(),
-        FagsakYtelseType.OMP, new OmsorgspengerRelasjonsFilter());
 
     private PersoninfoAdapter personinfoAdapter;
     private MedlemTjeneste medlemTjeneste;
@@ -68,9 +68,10 @@ public class RegisterdataInnhenter {
     private BehandlingRepository behandlingRepository;
     private MedlemskapRepository medlemskapRepository;
     private AbakusTjeneste abakusTjeneste;
-    private SkjæringstidspunktTjeneste skjæringstidspunktTjeneste;
     private BehandlingLåsRepository behandlingLåsRepository;
     private Instance<InformasjonselementerUtleder> informasjonselementer;
+    private Instance<YtelsesspesifikkRelasjonsFilter> relasjonsFiltre;
+    private Instance<OpplysningsperiodeTjeneste> opplysningsperiodeTjeneste;
 
     RegisterdataInnhenter() {
         // for CDI proxy
@@ -81,18 +82,20 @@ public class RegisterdataInnhenter {
                                  MedlemTjeneste medlemTjeneste,
                                  BehandlingRepositoryProvider repositoryProvider,
                                  MedlemskapRepository medlemskapRepository,
-                                 SkjæringstidspunktTjeneste skjæringstidspunktTjeneste,
                                  AbakusTjeneste abakusTjeneste,
-                                 @Any Instance<InformasjonselementerUtleder> utledInformasjonselementer) {
+                                 @Any Instance<InformasjonselementerUtleder> utledInformasjonselementer,
+                                 @Any Instance<YtelsesspesifikkRelasjonsFilter> relasjonsFiltre,
+                                 @Any Instance<OpplysningsperiodeTjeneste> opplysningsperiodeTjeneste) {
         this.personinfoAdapter = personinfoAdapter;
         this.medlemTjeneste = medlemTjeneste;
-        this.skjæringstidspunktTjeneste = skjæringstidspunktTjeneste;
         this.personopplysningRepository = repositoryProvider.getPersonopplysningRepository();
         this.behandlingRepository = repositoryProvider.getBehandlingRepository();
         this.behandlingLåsRepository = repositoryProvider.getBehandlingLåsRepository();
         this.medlemskapRepository = medlemskapRepository;
         this.abakusTjeneste = abakusTjeneste;
         this.informasjonselementer = utledInformasjonselementer;
+        this.relasjonsFiltre = relasjonsFiltre;
+        this.opplysningsperiodeTjeneste = opplysningsperiodeTjeneste;
     }
 
     public Personinfo innhentSaksopplysningerForSøker(AktørId søkerAktørId) {
@@ -127,37 +130,58 @@ public class RegisterdataInnhenter {
         medlemskapRepository.lagreMedlemskapRegisterOpplysninger(behandlingId, medlemskapsperioder);
     }
 
-    private PersonInformasjonBuilder byggPersonopplysningMedRelasjoner(Personinfo søkerPersonInfo,
-                                                                       Behandling behandling) {
+    private PersonInformasjonBuilder byggPersonopplysningMedRelasjoner(Personinfo søkerPersonInfo, Behandling behandling) {
 
         var informasjonBuilder = new PersonInformasjonBuilder(PersonopplysningVersjonType.REGISTRERT);
 
-        // Historikk for søker
         var fagsakYtelseType = behandling.getFagsakYtelseType();
-        var opplysningsperioden = skjæringstidspunktTjeneste.utledOpplysningsperiode(behandling.getId(), fagsakYtelseType, true);
-        var personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(søkerPersonInfo.getAktørId(), opplysningsperioden);
-        if (personhistorikkinfo != null) {
-            mapAdresser(personhistorikkinfo.getAdressehistorikk(), informasjonBuilder, søkerPersonInfo);
-            mapStatsborgerskap(personhistorikkinfo.getStatsborgerskaphistorikk(), informasjonBuilder, søkerPersonInfo);
-            mapPersonstatus(personhistorikkinfo.getPersonstatushistorikk(), informasjonBuilder, søkerPersonInfo);
-        }
+        var opplysningsperioden = OpplysningsperiodeTjeneste.getTjeneste(opplysningsperiodeTjeneste, behandling.getFagsakYtelseType())
+            .utledOpplysningsperiode(behandling.getId(), true);
 
-        mapTilPersonopplysning(søkerPersonInfo, informasjonBuilder, true, false, behandling);
+        Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(søkerPersonInfo.getAktørId(), opplysningsperioden);
+        mapInfoMedHistorikkTilEntitet(søkerPersonInfo, personhistorikkinfo, informasjonBuilder, behandling);
+
+        leggTilSøkersBarn(søkerPersonInfo, behandling, informasjonBuilder, opplysningsperioden);
+        leggTilFosterbarn(søkerPersonInfo, behandling, informasjonBuilder, opplysningsperioden);
 
         if (fagsakYtelseType.harRelatertePersoner()) {
-            // legg til pleietrengende
-            leggTilPleietrengende(informasjonBuilder, behandling);
-            // Ektefelle
-            leggTilEktefelle(søkerPersonInfo, informasjonBuilder, behandling);
-            // Relatert person
-            leggTilRelatertPerson(informasjonBuilder, behandling);
-
+            leggTilPleietrengende(informasjonBuilder, behandling, opplysningsperioden);
+            leggTilEktefelle(informasjonBuilder, behandling, opplysningsperioden, søkerPersonInfo);
+            leggTilRelatertPerson(informasjonBuilder, behandling, opplysningsperioden);
         }
 
         return informasjonBuilder;
     }
 
-    private void leggTilPleietrengende(PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
+    private void leggTilSøkersBarn(Personinfo søkerPersonInfo, Behandling behandling, PersonInformasjonBuilder informasjonBuilder, no.nav.k9.sak.typer.Periode opplysningsperioden) {
+        List<Personinfo> barna = hentBarnRelatertTil(søkerPersonInfo, behandling, opplysningsperioden);
+        barna.forEach(barn -> {
+            if (hentHistorikkForRelatertePersoner(behandling)) {
+                Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(barn.getAktørId(), opplysningsperioden);
+                mapInfoMedHistorikkTilEntitet(barn, personhistorikkinfo, informasjonBuilder, behandling);
+            } else {
+                mapInfoTilEntitet(barn, informasjonBuilder, behandling);
+            }
+            mapRelasjon(barn, søkerPersonInfo, utledRelasjonsrolleTilBarn(søkerPersonInfo, barn), informasjonBuilder);
+            mapRelasjon(søkerPersonInfo, barn, Collections.singletonList(RelasjonsRolleType.BARN), informasjonBuilder);
+        });
+    }
+
+    private void leggTilFosterbarn(Personinfo søkerPersonInfo, Behandling behandling, PersonInformasjonBuilder informasjonBuilder, no.nav.k9.sak.typer.Periode opplysningsperioden) {
+        List<Personinfo> barna = hentFosterbarn(behandling);
+        barna.forEach(barn -> {
+            if (hentHistorikkForRelatertePersoner(behandling)) {
+                Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(barn.getAktørId(), opplysningsperioden);
+                mapInfoMedHistorikkTilEntitet(barn, personhistorikkinfo, informasjonBuilder, behandling);
+            } else {
+                mapInfoTilEntitet(barn, informasjonBuilder, behandling);
+            }
+            mapRelasjon(barn, søkerPersonInfo, List.of(RelasjonsRolleType.FOSTERFORELDER), informasjonBuilder);
+            mapRelasjon(søkerPersonInfo, barn, List.of(RelasjonsRolleType.FOSTERBARN), informasjonBuilder);
+        });
+    }
+
+    private void leggTilPleietrengende(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
         var pleietrengende = Optional.ofNullable(behandling.getFagsak().getPleietrengendeAktørId());
         if (pleietrengende.isPresent()) {
             var aktørId = pleietrengende.get();
@@ -167,7 +191,12 @@ public class RegisterdataInnhenter {
                 if (harAktør(informasjonBuilder, personinfo)) {
                     return;
                 }
-                mapTilPersonopplysning(personinfo, informasjonBuilder, false, true, behandling);
+                if (hentHistorikkForRelatertePersoner(behandling)) {
+                    Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
+                    mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder, behandling);
+                } else {
+                    mapInfoTilEntitet(personinfo, informasjonBuilder, behandling);
+                }
             } else {
                 throw new IllegalStateException("Finner ikke personinfo i PDL for pleietrengende aktørid");
             }
@@ -178,14 +207,19 @@ public class RegisterdataInnhenter {
         return informasjonBuilder.harAktørId(personinfo.getAktørId());
     }
 
-    private void leggTilRelatertPerson(PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
+    private void leggTilRelatertPerson(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
         var relatertPerson = Optional.ofNullable(behandling.getFagsak().getRelatertPersonAktørId());
         if (relatertPerson.isPresent()) {
             var aktørId = relatertPerson.get();
             var personinfo = personinfoAdapter.hentPersoninfo(aktørId);
             if (personinfo != null) {
                 log.info("Fant personinfo for angitt relatert person fra fagsak");
-                mapTilPersonopplysning(personinfo, informasjonBuilder, false, true, behandling);
+                if (hentHistorikkForRelatertePersoner(behandling)) {
+                    Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
+                    mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder, behandling);
+                } else {
+                    mapInfoTilEntitet(personinfo, informasjonBuilder, behandling);
+                }
             } else {
                 throw new IllegalStateException("Finner ikke personinfo i PDL for relatert person aktørid");
             }
@@ -213,8 +247,7 @@ public class RegisterdataInnhenter {
 
             final DatoIntervallEntitet periode = DatoIntervallEntitet.fraOgMedTilOgMed(brukFødselsdatoHvisEtter(
                 statsborgerskap.getGyldighetsperiode().getFom(), personinfo.getFødselsdato()), statsborgerskap.getGyldighetsperiode().getTom());
-            final PersonInformasjonBuilder.StatsborgerskapBuilder builder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(), periode,
-                landkode, region);
+            final PersonInformasjonBuilder.StatsborgerskapBuilder builder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(), periode, landkode, region);
             builder.medPeriode(periode)
                 .medStatsborgerskap(landkode);
             builder.medRegion(region);
@@ -226,8 +259,13 @@ public class RegisterdataInnhenter {
     private void mapAdresser(List<AdressePeriode> adressehistorikk, PersonInformasjonBuilder informasjonBuilder, Personinfo personinfo) {
         AktørId aktørId = personinfo.getAktørId();
         for (AdressePeriode adresse : adressehistorikk) {
-            final DatoIntervallEntitet periode = DatoIntervallEntitet.fraOgMedTilOgMed(
-                brukFødselsdatoHvisEtter(adresse.getGyldighetsperiode().getFom(), personinfo.getFødselsdato()), adresse.getGyldighetsperiode().getTom());
+            LocalDate tom = adresse.getGyldighetsperiode().getTom();
+            LocalDate fom = brukFødselsdatoHvisEtter(adresse.getGyldighetsperiode().getFom(), personinfo.getFødselsdato());
+            if (tom.isBefore(personinfo.getFødselsdato())) {
+                log.warn("Ignorerer en adresse for en person på saken, da adressen opphørte før personen ble født");
+                continue;
+            }
+            final DatoIntervallEntitet periode = DatoIntervallEntitet.fraOgMedTilOgMed(fom, tom);
             final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(aktørId, periode,
                 adresse.getAdresse().getAdresseType());
             adresseBuilder.medPeriode(periode)
@@ -248,20 +286,6 @@ public class RegisterdataInnhenter {
         return dato;
     }
 
-    private void mapTilPersonopplysning(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder, boolean skalHenteBarnRelasjoner,
-                                        boolean erIkkeSøker, Behandling behandling) {
-        mapInfoTilEntitet(personinfo, informasjonBuilder, erIkkeSøker);
-
-        if (skalHenteBarnRelasjoner) {
-            List<Personinfo> barna = hentBarnRelatertTil(personinfo, behandling);
-            barna.forEach(barn -> {
-                mapInfoTilEntitet(barn, informasjonBuilder, true);
-                mapRelasjon(personinfo, barn, Collections.singletonList(RelasjonsRolleType.BARN), informasjonBuilder);
-                mapRelasjon(barn, personinfo, utledRelasjonsrolleTilBarn(personinfo, barn), informasjonBuilder);
-            });
-        }
-    }
-
     private List<RelasjonsRolleType> utledRelasjonsrolleTilBarn(Personinfo personinfo, Personinfo barn) {
         if (barn == null) {
             return Collections.emptyList();
@@ -269,7 +293,7 @@ public class RegisterdataInnhenter {
         return barn.getFamilierelasjoner().stream()
             .filter(fr -> fr.getPersonIdent().equals(personinfo.getPersonIdent()))
             .map(rel -> utledRelasjonsrolleTilBarn(personinfo.getKjønn(), rel.getRelasjonsrolle()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private void mapRelasjon(Personinfo fra, Personinfo til, List<RelasjonsRolleType> roller, PersonInformasjonBuilder informasjonBuilder) {
@@ -291,31 +315,39 @@ public class RegisterdataInnhenter {
         return sammeBosted.orElse(false);
     }
 
-    private void mapInfoTilEntitet(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder, boolean lagreIHistoriskeTabeller) {
+    private void mapInfoMedHistorikkTilEntitet(Personinfo personinfo, Personhistorikkinfo personhistorikkinfo, PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
         if (harAktør(informasjonBuilder, personinfo)) {
             return;
         }
 
-        final DatoIntervallEntitet periode = getPeriode(personinfo.getFødselsdato(), Tid.TIDENES_ENDE);
-        final PersonInformasjonBuilder.PersonopplysningBuilder builder = informasjonBuilder.getPersonopplysningBuilder(personinfo.getAktørId());
-        builder.medFødselsdato(personinfo.getFødselsdato())
-            .medNavn(personinfo.getNavn())
-            .medDødsdato(personinfo.getDødsdato())
-            .medKjønn(personinfo.getKjønn())
-            .medSivilstand(personinfo.getSivilstandType())
-            .medRegion(personinfo.getRegion());
-        informasjonBuilder.leggTil(builder);
+        mapPersonopplysning(informasjonBuilder, personinfo);
+        mapDeltBosted(personinfo, informasjonBuilder, behandling);
 
-        if (lagreIHistoriskeTabeller || informasjonBuilder.harIkkeFåttStatsborgerskapHistorikk(personinfo.getAktørId())) {
-            final PersonInformasjonBuilder.StatsborgerskapBuilder statsborgerskapBuilder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(),
-                periode, personinfo.getLandkode(), personinfo.getRegion());
+        mapAdresser(personhistorikkinfo.getAdressehistorikk(), informasjonBuilder, personinfo);
+        mapStatsborgerskap(personhistorikkinfo.getStatsborgerskaphistorikk(), informasjonBuilder, personinfo);
+        mapPersonstatus(personhistorikkinfo.getPersonstatushistorikk(), informasjonBuilder, personinfo);
+
+    }
+
+    private void mapInfoTilEntitet(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
+        if (harAktør(informasjonBuilder, personinfo)) {
+            return;
+        }
+
+        mapPersonopplysning(informasjonBuilder, personinfo);
+        mapDeltBosted(personinfo, informasjonBuilder, behandling);
+
+        //map opplysninger som kan være periodisert, men som ikke er hentet inn periodisert for denne saken
+        //setter da periode som angitt under
+        DatoIntervallEntitet periode = getPeriode(personinfo.getFødselsdato(), Tid.TIDENES_ENDE);
+        if (informasjonBuilder.harIkkeFåttStatsborgerskapHistorikk(personinfo.getAktørId())) {
+            PersonInformasjonBuilder.StatsborgerskapBuilder statsborgerskapBuilder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(), periode, personinfo.getLandkode(), personinfo.getRegion());
             informasjonBuilder.leggTil(statsborgerskapBuilder);
         }
 
-        if (lagreIHistoriskeTabeller || informasjonBuilder.harIkkeFåttAdresseHistorikk(personinfo.getAktørId())) {
+        if (informasjonBuilder.harIkkeFåttAdresseHistorikk(personinfo.getAktørId())) {
             for (Adresseinfo adresse : personinfo.getAdresseInfoList()) {
-                final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(),
-                    periode, adresse.getGjeldendePostadresseType());
+                PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(), periode, adresse.getGjeldendePostadresseType());
                 informasjonBuilder.leggTil(adresseBuilder
                     .medAdresselinje1(adresse.getAdresselinje1())
                     .medAdresselinje2(adresse.getAdresselinje2())
@@ -327,10 +359,41 @@ public class RegisterdataInnhenter {
             }
         }
 
-        if (lagreIHistoriskeTabeller || informasjonBuilder.harIkkeFåttPersonstatusHistorikk(personinfo.getAktørId())) {
-            final PersonInformasjonBuilder.PersonstatusBuilder personstatusBuilder = informasjonBuilder.getPersonstatusBuilder(personinfo.getAktørId(),
-                periode).medPersonstatus(personinfo.getPersonstatus());
+        if (informasjonBuilder.harIkkeFåttPersonstatusHistorikk(personinfo.getAktørId())) {
+            PersonInformasjonBuilder.PersonstatusBuilder personstatusBuilder = informasjonBuilder.getPersonstatusBuilder(personinfo.getAktørId(), periode)
+                .medPersonstatus(personinfo.getPersonstatus());
             informasjonBuilder.leggTil(personstatusBuilder);
+        }
+    }
+
+    private void mapPersonopplysning(PersonInformasjonBuilder informasjonBuilder, Personinfo personinfo) {
+        final PersonInformasjonBuilder.PersonopplysningBuilder builder = informasjonBuilder.getPersonopplysningBuilder(personinfo.getAktørId());
+        builder.medFødselsdato(personinfo.getFødselsdato())
+            .medNavn(personinfo.getNavn())
+            .medDødsdato(personinfo.getDødsdato())
+            .medKjønn(personinfo.getKjønn())
+            .medSivilstand(personinfo.getSivilstandType())
+            .medRegion(personinfo.getRegion());
+        informasjonBuilder.leggTil(builder);
+    }
+
+    private void mapDeltBosted(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
+        if (!hentDeltBostedForBarn(behandling)) {
+            return;
+        }
+        for (DeltBosted deltBosted : personinfo.getDeltBostedList()) {
+            Adresseinfo adresse = deltBosted.getAdresseinfo();
+
+            DatoIntervallEntitet periode = DatoIntervallEntitet.fra(deltBosted.getPeriode());
+            final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(), periode, AdresseType.DELT_BOSTEDSADRESSE);
+            informasjonBuilder.leggTil(adresseBuilder
+                .medAdresselinje1(adresse.getAdresselinje1())
+                .medAdresselinje2(adresse.getAdresselinje2())
+                .medAdresselinje3(adresse.getAdresselinje3())
+                .medPostnummer(adresse.getPostNr())
+                .medLand(adresse.getLand())
+                .medAdresseType(AdresseType.DELT_BOSTEDSADRESSE)
+                .medPeriode(periode));
         }
     }
 
@@ -338,7 +401,7 @@ public class RegisterdataInnhenter {
         return DatoIntervallEntitet.fraOgMedTilOgMed(fom, tom != null ? tom : Tid.TIDENES_ENDE);
     }
 
-    private void leggTilEktefelle(Personinfo søkerPersonInfo, PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
+    private void leggTilEktefelle(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden, Personinfo søkerPersonInfo) {
         // Ektefelle
         final List<Familierelasjon> familierelasjoner = søkerPersonInfo.getFamilierelasjoner()
             .stream()
@@ -351,7 +414,13 @@ public class RegisterdataInnhenter {
             Optional<Personinfo> ektefelleInfo = personinfoAdapter.innhentSaksopplysninger(ident);
             if (ektefelleInfo.isPresent()) {
                 final Personinfo personinfo = ektefelleInfo.get();
-                mapTilPersonopplysning(personinfo, informasjonBuilder, false, true, behandling);
+                if (hentHistorikkForRelatertePersoner(behandling)) {
+                    Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
+                    mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder, behandling);
+                } else {
+                    mapInfoTilEntitet(personinfo, informasjonBuilder, behandling);
+                }
+
                 mapRelasjon(søkerPersonInfo, personinfo, Collections.singletonList(familierelasjon.getRelasjonsrolle()), informasjonBuilder);
                 mapRelasjon(personinfo, søkerPersonInfo, Collections.singletonList(familierelasjon.getRelasjonsrolle()), informasjonBuilder);
             } else {
@@ -360,13 +429,11 @@ public class RegisterdataInnhenter {
         }
     }
 
-    private List<Personinfo> hentBarnRelatertTil(Personinfo personinfo, Behandling behandling) {
+    private List<Personinfo> hentBarnRelatertTil(Personinfo personinfo, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
         List<Personinfo> relaterteBarn = hentAlleRelaterteBarn(personinfo);
-        var relasjonsFilter = barnRelasjonsFilter.getOrDefault(behandling.getFagsakYtelseType(), new IngenRelasjonFilter());
+        var filter = YtelsesspesifikkRelasjonsFilter.finnTjeneste(relasjonsFiltre, behandling.getFagsakYtelseType());
 
-        return relaterteBarn.stream()
-            .filter(it -> relasjonsFilter.relasjonsFiltrering(behandling, it))
-            .collect(Collectors.toList());
+        return filter.relasjonsFiltreringBarn(behandling, relaterteBarn, opplysningsperioden);
     }
 
     private List<Personinfo> hentAlleRelaterteBarn(Personinfo søkerPersonInfo) {
@@ -375,7 +442,14 @@ public class RegisterdataInnhenter {
             .filter(r -> r.getRelasjonsrolle().equals(RelasjonsRolleType.BARN))
             .map(r -> personinfoAdapter.innhentSaksopplysningerForBarn(r.getPersonIdent()).orElse(null))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
+    }
+
+    private List<Personinfo> hentFosterbarn(Behandling behandling) {
+        var filter = YtelsesspesifikkRelasjonsFilter.finnTjeneste(relasjonsFiltre, behandling.getFagsakYtelseType());
+        return filter.hentFosterbarn(behandling).stream()
+            .map(aktørId -> personinfoAdapter.hentPersoninfo(aktørId))
+            .toList();
     }
 
     private RelasjonsRolleType utledRelasjonsrolleTilBarn(NavBrukerKjønn kjønn, RelasjonsRolleType rolle) {
@@ -391,7 +465,8 @@ public class RegisterdataInnhenter {
     }
 
     private List<MedlemskapPerioderEntitet> innhentMedlemskapsopplysningerFor(AktørId søkerInfo, Behandling behandling) {
-        var opplysningsperiode = skjæringstidspunktTjeneste.utledOpplysningsperiode(behandling.getId(), behandling.getFagsakYtelseType(), false);
+        var opplysningsperiode = OpplysningsperiodeTjeneste.getTjeneste(opplysningsperiodeTjeneste, behandling.getFagsakYtelseType())
+            .utledOpplysningsperiode(behandling.getId(), false);
         LocalDate fom = opplysningsperiode.getFom();
         LocalDate tom = opplysningsperiode.getTom();
         List<Medlemskapsperiode> medlemskapsperioder = medlemTjeneste.finnMedlemskapPerioder(søkerInfo, fom, tom);
@@ -431,7 +506,12 @@ public class RegisterdataInnhenter {
     private void doInnhentIAYIAbakus(Behandling behandling, BehandlingType behandlingType, FagsakYtelseType fagsakYtelseType) {
         var behandlingUuid = behandling.getUuid();
         var saksnummer = behandling.getFagsak().getSaksnummer().getVerdi();
-        var opplysningsperiode = skjæringstidspunktTjeneste.utledOpplysningsperiode(behandling.getId(), fagsakYtelseType, false);
+
+        var periodeTjeneste = OpplysningsperiodeTjeneste.getTjeneste(opplysningsperiodeTjeneste, fagsakYtelseType);
+
+        var opplysningsperiode = periodeTjeneste.utledOpplysningsperiode(behandling.getId(), false);
+
+
         var ytelseType = YtelseType.fraKode(fagsakYtelseType.getKode());
 
         log.info("Trigger innhenting i abakus for behandling med id={} og uuid={}, saksnummer={}, opplysningsperiode={}, ytelseType={}",
@@ -444,10 +524,22 @@ public class RegisterdataInnhenter {
         var innhentRegisterdataRequest = new InnhentRegisterdataRequest(saksnummer, behandlingUuid, ytelseType, periode, aktør, informasjonsElementer);
         innhentRegisterdataRequest.setCallbackUrl(abakusTjeneste.getCallbackUrl());
 
+        var opplysningsperiodeSkattegrunnlag = periodeTjeneste.utledOpplysningsperiodeSkattegrunnlag(behandling.getId());
+        log.info("Opplysningsperiode skattegrunnlag: " + opplysningsperiodeSkattegrunnlag);
+        innhentRegisterdataRequest.setOpplysningsperiodeSkattegrunnlag(new Periode(opplysningsperiodeSkattegrunnlag.getFom(), opplysningsperiodeSkattegrunnlag.getTom()));
+
         abakusTjeneste.innhentRegisterdata(innhentRegisterdataRequest);
     }
 
     private Set<RegisterdataType> utledBasertPå(BehandlingType behandlingType, FagsakYtelseType ytelseType) {
         return InformasjonselementerUtleder.finnTjeneste(informasjonselementer, ytelseType, behandlingType).utled(behandlingType);
+    }
+
+    private boolean hentHistorikkForRelatertePersoner(Behandling behandling) {
+        return YtelsesspesifikkRelasjonsFilter.finnTjeneste(relasjonsFiltre, behandling.getFagsakYtelseType()).hentHistorikkForRelatertePersoner();
+    }
+
+    private boolean hentDeltBostedForBarn(Behandling behandling) {
+        return YtelsesspesifikkRelasjonsFilter.finnTjeneste(relasjonsFiltre, behandling.getFagsakYtelseType()).hentDeltBosted();
     }
 }
