@@ -1,5 +1,7 @@
 package no.nav.k9.sak.ytelse.omsorgspenger.årskvantum;
 
+import static no.nav.k9.kodeverk.behandling.FagsakYtelseType.OMSORGSPENGER;
+
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -13,6 +15,7 @@ import org.slf4j.LoggerFactory;
 
 import jakarta.enterprise.context.Dependent;
 import jakarta.inject.Inject;
+import no.nav.fpsak.tidsserie.LocalDateTimeline;
 import no.nav.k9.kodeverk.behandling.FagsakYtelseType;
 import no.nav.k9.kodeverk.dokument.Brevkode;
 import no.nav.k9.sak.behandling.BehandlingReferanse;
@@ -32,8 +35,9 @@ import no.nav.k9.sak.perioder.VurdertSøktPeriode;
 import no.nav.k9.sak.typer.JournalpostId;
 import no.nav.k9.sak.ytelse.omsorgspenger.inngangsvilkår.søknadsfrist.InntektsmeldingSøktePerioderMapper;
 import no.nav.k9.sak.ytelse.omsorgspenger.inngangsvilkår.søknadsfrist.SøknadPerioderTjeneste;
+import no.nav.k9.sak.ytelse.omsorgspenger.inntektsmelding.AktivitetTypeArbeidsgiver;
 import no.nav.k9.sak.ytelse.omsorgspenger.inntektsmelding.KravDokumentFravær;
-import no.nav.k9.sak.ytelse.omsorgspenger.inntektsmelding.WrappedOppgittFraværPeriode;
+import no.nav.k9.sak.ytelse.omsorgspenger.inntektsmelding.OppgittFraværHolder;
 import no.nav.k9.sak.ytelse.omsorgspenger.repo.OmsorgspengerGrunnlagRepository;
 import no.nav.k9.sak.ytelse.omsorgspenger.repo.OppgittFravær;
 import no.nav.k9.sak.ytelse.omsorgspenger.repo.OppgittFraværPeriode;
@@ -56,7 +60,7 @@ public class TrekkUtFraværTjeneste {
                                  BehandlingRepository behandlingRepository,
                                  MottatteDokumentRepository mottatteDokumentRepository,
                                  InntektArbeidYtelseTjeneste iayTjeneste,
-                                 @FagsakYtelseTypeRef("OMP") VurderSøknadsfristTjeneste<OppgittFraværPeriode> søknadsfristTjeneste,
+                                 @FagsakYtelseTypeRef(OMSORGSPENGER) VurderSøknadsfristTjeneste<OppgittFraværPeriode> søknadsfristTjeneste,
                                  SøknadPerioderTjeneste søknadPerioderTjeneste,
                                  InntektsmeldingSøktePerioderMapper inntektsmeldingMapper) {
         this.grunnlagRepository = grunnlagRepository;
@@ -74,7 +78,8 @@ public class TrekkUtFraværTjeneste {
 
         List<OppgittFraværPeriode> fravær; // Tar med eventuelle perioder som tilkommer en åpen manuelt opprettet behandling
         if (behandling.erManueltOpprettet()) {
-            fravær = alleFraværsperioderPåFagsak(behandling);
+            var oppgittFravær = alleFraværsperioderPåFagsak(behandling);
+            fravær = KravDokumentFravær.mapTilOppgittFraværPeriode(oppgittFravær);
         } else {
             var fraværFraKravDokument = fraværPåBehandling(behandling);
             log.info("Legger til totalt {} perioder fra inntektsmeldinger og søknader", fraværFraKravDokument.size());
@@ -92,7 +97,7 @@ public class TrekkUtFraværTjeneste {
             fravær.size(),
             fravær.stream()
                 .map(OppgittFraværPeriode::getPeriode)
-                .collect(Collectors.toList()));
+                .toList());
         if (fravær.isEmpty()) {
             throw new IllegalStateException("Utvikler feil, forventer fraværsperioder til behandlingen");
         }
@@ -100,26 +105,38 @@ public class TrekkUtFraværTjeneste {
     }
 
     private List<OppgittFraværPeriode> fraværPåBehandling(Behandling behandling) {
+        Map<KravDokument, List<VurdertSøktPeriode<OppgittFraværPeriode>>> vurdertePerioder = kravPåBehandlingenInklSøknadsfristvurdering(behandling);
+        log.info("Fant {} inntektsmeldinger og {} søknader knyttet til behandlingen:", countIm(vurdertePerioder), countSøknad(vurdertePerioder));
+        return trekkUtFraværMapTilOppgittFraværPerioder(vurdertePerioder);
+    }
+
+    public Map<KravDokument, List<VurdertSøktPeriode<OppgittFraværPeriode>>> kravPåBehandlingenInklSøknadsfristvurdering(Behandling behandling) {
         Map<KravDokument, List<SøktPeriode<OppgittFraværPeriode>>> søkteFraværsperioder = new LinkedHashMap<>();
         søkteFraværsperioder.putAll(søktFraværFraImPåBehandling(behandling));
         søkteFraværsperioder.putAll(fraværFraSøknaderPåBehandling(behandling));
 
         var vurdertePerioder = søknadsfristTjeneste.vurderSøknadsfrist(behandling.getId(), søkteFraværsperioder);
-        log.info("Fant {} inntektsmeldinger og {} søknader knyttet til behandlingen:", countIm(vurdertePerioder), countSøknad(vurdertePerioder));
-
-        return trekkUtFravær(vurdertePerioder).stream().map(WrappedOppgittFraværPeriode::getPeriode).collect(Collectors.toList());
+        return vurdertePerioder;
     }
 
     public List<OppgittFraværPeriode> fraværFraInntektsmeldingerPåFagsak(Behandling behandling) {
         var fraværPåFagsak = søktFraværFraImPåFagsak(behandling.getFagsak());
 
         var vurdertePerioder = søknadsfristTjeneste.vurderSøknadsfrist(behandling.getId(), fraværPåFagsak);
-        log.info("Fant {} inntektsmeldinger knyttet med fræværsperioder for behandlingen:", countIm(vurdertePerioder));
+        log.info("Fant {} inntektsmeldinger knyttet med fræværsperioder for fagsaken:", countIm(vurdertePerioder));
 
-        return trekkUtFravær(vurdertePerioder).stream().map(WrappedOppgittFraværPeriode::getPeriode).collect(Collectors.toList());
+        return trekkUtFraværMapTilOppgittFraværPerioder(vurdertePerioder);
     }
 
-    public List<OppgittFraværPeriode> alleFraværsperioderPåFagsak(Behandling behandling) {
+    public List<OppgittFraværPeriode> fraværsperioderFraSøknaderPåFagsak(Behandling behandling) {
+        var søkteFraværsperioder = fraværFraSøknaderPåFagsak(behandling);
+        var vurdertePerioder = søknadsfristTjeneste.vurderSøknadsfrist(behandling.getId(), søkteFraværsperioder);
+        log.info("Fant {} søknader knyttet til fagsaken:", countSøknad(vurdertePerioder));
+
+        return trekkUtFraværMapTilOppgittFraværPerioder(vurdertePerioder);
+    }
+
+    public Map<AktivitetTypeArbeidsgiver, LocalDateTimeline<OppgittFraværHolder>> alleFraværsperioderPåFagsak(Behandling behandling) {
         Map<KravDokument, List<SøktPeriode<OppgittFraværPeriode>>> søkteFraværsperioder = new LinkedHashMap<>();
         søkteFraværsperioder.putAll(søktFraværFraImPåFagsak(behandling.getFagsak()));
         søkteFraværsperioder.putAll(fraværFraSøknaderPåFagsak(behandling));
@@ -127,7 +144,7 @@ public class TrekkUtFraværTjeneste {
         var vurdertePerioder = søknadsfristTjeneste.vurderSøknadsfrist(behandling.getId(), søkteFraværsperioder);
         log.info("Fant {} inntektsmeldinger med fraværsperioder og {} søknader knyttet til fagsaken", countIm(vurdertePerioder), countSøknad(vurdertePerioder));
 
-        return trekkUtFravær(vurdertePerioder).stream().map(WrappedOppgittFraværPeriode::getPeriode).collect(Collectors.toList());
+        return trekkUtFravær(vurdertePerioder);
     }
 
     private Map<KravDokument, List<SøktPeriode<OppgittFraværPeriode>>> søktFraværFraImPåBehandling(Behandling behandling) {
@@ -157,14 +174,14 @@ public class TrekkUtFraværTjeneste {
     }
 
     private Map<KravDokument, List<SøktPeriode<OppgittFraværPeriode>>> fraværFraSøknaderPåFagsak(Behandling behandling) {
-        return søknadPerioderTjeneste.hentSøktePerioderMedKravdokumentPåFagsak(BehandlingReferanse.fra(behandling));
+        return søknadPerioderTjeneste.hentSøktePerioderMedKravdokumentPåFagsak(behandling.getFagsakId());
     }
 
     private Map<KravDokument, List<SøktPeriode<OppgittFraværPeriode>>> fraværFraSøknaderPåBehandling(Behandling behandling) {
         return søknadPerioderTjeneste.hentSøktePerioderMedKravdokumentPåBehandling(BehandlingReferanse.fra(behandling));
     }
 
-    public List<WrappedOppgittFraværPeriode> fraværFraKravDokumenterPåFagsakMedSøknadsfristVurdering(Behandling behandling) {
+    public Map<AktivitetTypeArbeidsgiver, LocalDateTimeline<OppgittFraværHolder>> fraværFraKravDokumenterPåFagsakMedSøknadsfristVurdering(Behandling behandling) {
         var kravdokumenterMedFraværsperioder = søknadsfristTjeneste.vurderSøknadsfrist(BehandlingReferanse.fra(behandling));
         return trekkUtFravær(kravdokumenterMedFraværsperioder);
     }
@@ -210,10 +227,14 @@ public class TrekkUtFraværTjeneste {
         }
     }
 
-    // Slår sammen overlappende perioder fra kravdokumenter (IM-er, søknader)
-    public List<WrappedOppgittFraværPeriode> trekkUtFravær(Map<KravDokument, List<VurdertSøktPeriode<OppgittFraværPeriode>>> fraværPerKravdokument) {
-        return new KravDokumentFravær().trekkUtAlleFraværOgValiderOverlapp(fraværPerKravdokument);
+    public Map<AktivitetTypeArbeidsgiver, LocalDateTimeline<OppgittFraværHolder>> trekkUtFravær(Map<KravDokument, List<VurdertSøktPeriode<OppgittFraværPeriode>>> fraværPerKravdokument) {
+        return new KravDokumentFravær().trekkUtFravær(fraværPerKravdokument);
     }
+
+    public List<OppgittFraværPeriode> trekkUtFraværMapTilOppgittFraværPerioder(Map<KravDokument, List<VurdertSøktPeriode<OppgittFraværPeriode>>> fraværPerKravdokument) {
+        return new KravDokumentFravær().trekkUtFraværMapTilOppgittFraværPeriode(fraværPerKravdokument);
+    }
+
 
     private long countIm(Map<KravDokument, List<VurdertSøktPeriode<OppgittFraværPeriode>>> vurdertePerioder) {
         return vurdertePerioder.keySet().stream().filter(type -> List.of(KravDokumentType.INNTEKTSMELDING, KravDokumentType.INNTEKTSMELDING_UTEN_REFUSJONSKRAV).contains(type.getType())).count();
